Fixing index file naming.

--- a/index.html
+++ b/index.html
@@ -1507,6 +1507,7 @@ Email: <a href="mailto:kyle.mckay@usace.army.mil" class="email">kyle.mckay@usace
 <p><strong>TEMPORARY ECO DATA. FAKE COST DATA.</strong></p>
 <div id="introduction" class="section level1">
 <h1><strong>1. Introduction</strong></h1>
+<p>Did this work?</p>
 <p>What is CEICA? Why is it useful?</p>
 <p>Where did benefits come from? Describe model briefly. Include data in
 an appendix. Describe the need for annualization.</p>
