Added link to miro board.

--- a/index.html
+++ b/index.html
@@ -1509,6 +1509,9 @@ Email: <a href="mailto:kyle.mckay@usace.army.mil" class="email">kyle.mckay@usace
 <h1><strong>1. Introduction</strong></h1>
 <p>Did this work?</p>
 <p>What is CEICA? Why is it useful?</p>
+<p>Where did the alternatives come from? Describe plan formulation
+process. Mention miro board.</p>
+<p><a href="https://miro.com/app/board/uXjVN9DAdvA=/" class="uri">https://miro.com/app/board/uXjVN9DAdvA=/</a></p>
 <p>Where did benefits come from? Describe model briefly. Include data in
 an appendix. Describe the need for annualization.</p>
 <p>Where did costs come from? Include data in an appendix. Describe the
